--- a/data/ui/style.css
+++ b/data/ui/style.css
@@ -21,3 +21,26 @@ textview {
 .overlay {
   padding: 12px;
 }
+
+.card-sidebar {
+    padding: 8px;
+    background-color: transparent;
+}
+
+.card-sidebar .card {
+    padding: 6px 6px 6px 6px;
+}
+
+.card-sidebar row {
+    margin: 4px 0;
+}
+
+.card {
+    background-color: @theme_bg_color;
+    transition: background-color 0.3s;
+}
+
+.card:hover {
+    background-color: @theme_hover_bg_color;
+}
+
