--- a/data/ui/style.css
+++ b/data/ui/style.css
@@ -3,8 +3,9 @@ textview {
   padding-right: 6px;
   padding-top: 6px;
   padding-bottom: 6px;
-  font-size: 14px;
+  font-size: 16px;
   line-height: 1.2;
+  background-color: white;
 }
 
 frame {
