--- a/data/ui/style.css
+++ b/data/ui/style.css
@@ -41,4 +41,11 @@ listview row {
   margin-right: 12px;
 }
 
+.card {
+  background-color: white;
+  border: 1px solid @theme_base_color;
+  border-radius: 0;
+  padding: 6px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
 
