--- a/scriptorium/style.css
+++ b/scriptorium/style.css
@@ -34,3 +34,49 @@ listview {
   background-color: var(--secondary-sidebar-bg-color);
 }
 
+
+panelthemeselector {
+  margin: 9px;
+}
+panelthemeselector checkbutton {
+  padding: 0;
+  min-height: 44px;
+  min-width: 44px;
+  padding: 1px;
+  background-clip: content-box;
+  border-radius: 9999px;
+  box-shadow: inset 0 0 0 1px var(--border-color);
+
+  --light-bg: #fff;
+  --dark-bg: #202020;
+}
+panelthemeselector checkbutton.follow:checked,
+panelthemeselector checkbutton.light:checked,
+panelthemeselector checkbutton.dark:checked {
+  box-shadow: inset 0 0 0 2px var(--accent-bg-color);
+}
+panelthemeselector checkbutton.follow {
+  background-image: linear-gradient(to bottom right, var(--light-bg) 49.99%, var(--dark-bg) 50.01%);
+}
+panelthemeselector checkbutton.light {
+  background-color: var(--light-bg);
+}
+panelthemeselector checkbutton.dark {
+  background-color: var(--dark-bg);
+}
+panelthemeselector checkbutton radio {
+  -gtk-icon-source: none;
+  border: none;
+  background: none;
+  box-shadow: none;
+  min-width: 12px;
+  min-height: 12px;
+  transform: translate(27px, 14px);
+  padding: 2px;
+}
+panelthemeselector checkbutton radio:checked {
+  -gtk-icon-source: -gtk-icontheme("object-select-symbolic");
+  background-color: var(--accent-bg-color);
+  color: var(--accent-fg-color);
+}
+
