--- a/scriptorium/views/editor_formatting.html
+++ b/scriptorium/views/editor_formatting.html
@@ -1,77 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="initial-scale=1.0">
-    <title>Pagination</title>
-    <style>
-      html,
-      body {
-        margin:0;
-        padding:0;
-        height:100%;
-      }
-
-      body {
-        overflow: hidden;
-        position: relative;
-      }
-
-      .content {
-          overflow: hidden;
-      }
-
-      .container {
-          width: 100vw;
-          height: 100%;
-          overflow: hidden;
-      }
-    </style>
-    <style id="theme">
-        p {
-          margin-top: 0;
-          margin-bottom: 0em;
-          text-indent: 3ch;
-          font-family: Arial, sans-serif;
-          font-size: 16px;
+  <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="initial-scale=1.0">
+      <title>HTML display</title>
+      <style>
+        html,
+        body {
+          margin:0;
+          padding:0;
+          height:100%;
         }
-    </style>
-</head>
-<body>
-    <div class="container" id="container">
-      <div class="content" id="content">
-        {content}
-      </div>
-    </div>
-    <script>
-        const content = document.getElementById("content");
-        const container = document.getElementById("container");
-        let currentPage = 0;
-        let pageHeight = container.clientHeight;
-        let maxHeight = container.scrollHeight;
-        let nbPages = Math.round(maxHeight / pageHeight);
-
-        function updatePage() {
-            content.style.transform = `translateY(-${currentPage * pageHeight}px)`;
+        ::-webkit-scrollbar {
+          display: none;
         }
-
-        function nextPage() {
-            if (currentPage < nbPages) {
-                currentPage++;
-                updatePage();
-            }
-            return currentPage;
-        }
-
-        function prevPage() {
-            if (currentPage > 0) {
-                currentPage--;
-                updatePage();
-            }
-            return currentPage;
-        }
-    </script>
-
-</body>
+      </style>
+      <style id="theme">
+          p {
+            margin-top: 0;
+            margin-bottom: 0em;
+            text-indent: 3ch;
+            font-family: Arial, sans-serif;
+            font-size: 16px;
+          }
+      </style>
+  </head>
+  <body>
+    {content}
+  </body>
 </html>
 
