--- a/scriptorium/style.css
+++ b/scriptorium/style.css
@@ -14,6 +14,10 @@ listview {
   background-color: transparent;
 }
 
+.navigation-sidebar > row  {
+  margin-bottom: 0px;
+}
+
 .multiline_content {
   background-color: transparent;
 }
