--- a/scriptorium/templates/content.xhtml
+++ b/scriptorium/templates/content.xhtml
@@ -23,10 +23,23 @@
             font-family: Arial, sans-serif;
             font-size: 16px;
           }
+
+          p.first-paragraph {
+            text-indent: 0;
+          }
+
+          p.first-paragraph:first-letter {
+            font-size: 1.2em;
+            font-weight: bold
+          }
+
+          p.separator {
+            text-align: center
+          }
       </style>
   </head>
   <body>
-    {content}
+    {{content}}
   </body>
 </html>
 
